--- a/Info.plist
+++ b/Info.plist
@@ -64,6 +64,8 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NMFClientId</key>
+	<string>s9c4ui3bbc</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
