--- a/Info.plist
+++ b/Info.plist
@@ -66,6 +66,16 @@
 	<string>LaunchScreen</string>
 	<key>NMFClientId</key>
 	<string>s9c4ui3bbc</string>
+	<key>NSCameraUsageDescription</key>
+	<string>리뷰에 사진을 첨부하기 위해서 카메라 사용을 허용하시겠습니까?</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>위치정보를 사용하여 가까운 푸드트럭을 검색합니다.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>위치정보를 사용하여 가까운 푸드트럭을 검색합니다.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>리뷰에 사진을 첨부하기 위해서 앨범에 접근을 허용하시겠습니까?</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>리뷰에 사진을 첨부하기 위해서 앨범에 접근을 허용하시겠습니까?</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
